--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <section>
         <p>泛域名转发系统 - 让一切主机支持N级域名泛解析！（本文也是教程，正确操作后，立即生效！）</p>
 
-<p>VIP服务器当前状态：   fw.yanio.com （本文介绍的为插件版，完全免费）</p>
+<p>VIP服务器当前状态：<img src="http://fw.yanio.com/yes.gif" alt="">   fw.yanio.com （本文介绍的为插件版，完全免费）</p>
 
 <ul>
 <li><p>给你网站的用户，每人都提供一个N级域名。</p></li>
 <li><p>让你的域名具有无限N级域名转发功能。 （完全支持各种类型的虚拟主机用户）</p></li>
-</ul><p>好消息：自2009年10月1日起，在线管理网站投入使用。现在，你就可以访问<a href="http://fw.yanio.com%EF%BC%8C%E4%BD%BF%E7%94%A8%E5%85%B6%E4%BB%96%E7%89%88%E6%9C%AC%EF%BC%8C%E5%9C%A8%E7%BA%BF%E8%87%AA%E5%8A%A9%E5%BC%8F%E8%AE%BE%E7%BD%AE%EF%BC%81%E6%93%8D%E4%BD%9C%E6%9B%B4%E7%AE%80%E4%BE%BF%EF%BC%81">http://fw.yanio.com，使用其他版本，在线自助式设置！操作更简便！</a></p>
+</ul><p>好消息：自2009年10月1日起，在线管理网站投入使用。现在，你就可以访问<a href="http://fw.yanio.com">http://fw.yanio.com</a> ，使用其他版本，在线自助式设置！操作更简便！</p>
 
 <p>适用范围</p>
 
@@ -50,7 +50,7 @@
 
 <p>例如有一个UCH网站 <a href="http://friend.yanio.com/">http://friend.yanio.com/</a> 有一个会员叫“sunfeifei”，她的主页空间地址太长太难记了 <a href="http://friend.yanio.com/space.php?domain=sunfeifei">http://friend.yanio.com/space.php?domain=sunfeifei</a></p>
 
-<p>使用我们的服务以后，就可以通过<a href="http://sunfeifei.friend.yanio.com/%E6%9D%A5%E8%AE%BF%E9%97%AE%E8%BF%99%E4%B8%AA%E4%BC%9A%E5%91%98%E7%9A%84%E4%B8%AA%E4%BA%BA%E7%A9%BA%E9%97%B4%E4%BA%86%E3%80%82">http://sunfeifei.friend.yanio.com/来访问这个会员的个人空间了。</a></p>
+<p>使用我们的服务以后，就可以通过<a href="http://sunfeifei.friend.yanio.com/">http://sunfeifei.friend.yanio.com/</a> 来访问这个会员的个人空间了。</p>
 
 <p>我们的特色</p>
 
@@ -95,7 +95,7 @@
 
 <p>第三步 根据你网站的程序，编辑index转发页 </p>
 
-<p>编辑上一步做的index文件（下载index.php，修改其中的<a href="http://uch.yourname.com/%E9%83%A8%E5%88%86%E4%B8%BA%E4%BD%A0%E7%9A%84%E7%BD%91%E7%AB%99%E5%9C%B0%E5%9D%80%E5%8D%B3%E5%8F%AF%EF%BC%89%EF%BC%8C%E8%BD%AC%E5%90%91%E4%BD%A0%E7%9A%84%E7%B3%BB%E7%BB%9F%E3%80%82">http://uch.yourname.com/部分为你的网站地址即可），转向你的系统。</a></p>
+<p>编辑上一步做的index文件（<a href="http://www.yanio.com/downloads/urlfw.zip">下载index.php</a>，修改其中的<a href="http://uch.yourname.com/">http://uch.yourname.com/</a> 部分为你的网站地址即可），转向你的系统。</p>
 
 <p>以上三步做好了，即可马上使用了。</p>
 
@@ -113,15 +113,12 @@
 <li><p>添加了*主机头，对其他主机头有影响吗？ （如www/bbs/ftp……）
 不影响其他子域名的使用。因为域名解析是有顺序的，先解析普通的主机头，最后才解析泛域名。</p></li>
 <li><p>为什么不稳定，有时候能转发，有时候不能转发？ 
-如果不能转发，请先登录<a href="http://web.yanio.com/wildcard%EF%BC%8C%E6%9F%A5%E7%9C%8B%E6%9C%8D%E5%8A%A1%E5%99%A8%E7%8A%B6%E6%80%81%E6%98%AF%E5%90%A6%E6%AD%A3%E5%B8%B8%E3%80%82">http://web.yanio.com/wildcard，查看服务器状态是否正常。</a>
+如果不能转发，请先登录<a href="http://web.yanio.com/wildcard">http://web.yanio.com/wildcard</a> ，查看服务器状态是否正常。
 如果服务器状态正常，则说明你的DNS解析商不稳定，建议更改DNS解析商。</p></li>
 <li><p>有一个很奇怪的问题：我的www明明解析到了我自己的空间，为什么访问www还是会打开你们的页面呢？
 这是典型的域名解析问题。 有2种原因：</p></li>
-<li>你的域名DNS服务器不稳定（建议换一家DNS解析，例如everydns.net）</li>
-<li>你的宽带不稳定 （联系你的宽带接入商，例如电信网通）
-可以排除以下因素：</li>
-<li>和你的空间商无关</li>
-<li>和我们的服务也无关</li>
+<li>你的域名DNS服务器不稳定（建议换一家DNS解析）</li>
+<li>你的宽带不稳定 （联系你的宽带接入商，例如电信网通）</li>
 </ul>
       </section>
     </div>
